--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
       <section class="hero-section" id="hero">
         <div class="container">
-          <h1>my Tunes</h1>
+          <h1>Music</h1>
           <h3>Your music, movies, and TV shows take center stage.</h3>
           <p>
             Music is the best way to organize and enjoy the music, movies, and
